--- a/Volunteer/css/volunteer.css
+++ b/Volunteer/css/volunteer.css
@@ -100,6 +100,8 @@ button {
     
 }
 .footer {
-    height: 50px;
-    background-color: #0e2432;
+  background-color: #0e2432;
+  color: #fff;
+  text-align: center;
+  padding: 20px;
   }
